--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>DPRA - Klipping</title>
  </head>
  <header>
-    <div class="web-nav">
+    <div class="web-nav d-flex align-items-center">
         <div class="container">
-            <h4 class="text-white">DEWAN PERWAKILAN RAKYAT ACEH</h4>
-            <p class="quotes text-white">Adat Bak Po Teumeuruhom Hukom Bak Syiah Kuala</p>
+            <div class="row">
+                    <img src="assets/img/pancacita.png" alt="Logo Pancacita" style="width: 70px;">
+                    <div style="position: absolute; padding-left: 5rem;">
+                        <h4 class="text-white">DEWAN PERWAKILAN RAKYAT ACEH</h4>
+                        <p class="quotes text-white">Adat Bak Po Teumeuruhom Hukom Bak Syiah Kuala</p>    
+                    </div>
+            </div>
         </div>
     </div>
  </header>
