--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </div>
     </div>
 </header>
-
+<body>
     <div class="container mt-5">
         <div>
-            <h1>Klipping</h1>
+            <h1>Klipping Digital</h1>
 
-            <form action="/action_page.php">
-                <label class="mt-3 form-label" for="tanggal">Tanggal Media</label>
+            <form action="/action_pagess.php">
+                <label class="mt-3 form-label" for="tanggal">Tanggal Berita</label>
                 <input type="date" class="form-control" id="tanggal" name="tanggal">
 
                 <label class="mt-3" for="Media">Media</label>
@@ -43,10 +43,10 @@
                 </select>
 
                 <label for="inputHalaman" class="form-label mt-3">Halaman Berita</label>
-                <input type="number" class="form-control" id="inputHalaman" placeholder="0">
+                <input type="number" class="form-control" id="inputHalaman" min="1" max="32" placeholder="0">
 
                 <label for="inputKolom" class="form-label mt-3">Kolom Berita</label>
-                <input type="number" class="form-control" id="inputHalaman" placeholder="0">
+                <input type="number" class="form-control" id="inputHalaman" min="1" max="8" placeholder="0">
 
                 <label for="inputGambar" class="form-label mt-3">Lampiran Berita</label>
                 <div class="input-group">
@@ -58,10 +58,5 @@
             </form>
         </div>
     </div>
-    
-
-
- <body>
-    
- </body>
- </html>
+</body>
+</html>
